# labs-ai-exercise

./: README.md  pyproject.toml
src/labs_ai_exercise/: __init__.py
src/labs_ai_exercise/metadata/: metadata_processing.py
src/labs_ai_exercise/text/: nlp_utils.py  text_processing.py
